--- a/src/Component/NavBar.css
+++ b/src/Component/NavBar.css
@@ -1,4 +1,109 @@
 .navbar{
- height: 100px;
- border: 1px solid red;
+    background-color: #764ABC;
+    width: 100%;
+    height: 65px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #fff;
+    font-size: 16px;
+    padding-inline: 7vw;
+}
+.links{
+  display: flex;
+  align-items: center;
+}
+.logo{
+width: 120px;
+ display: grid;
+grid-row-gap: 0;
+  font-size: 14px;
+}
+
+.Icon{
+    width: 92px;
+}
+
+.Icon2 {
+    width: 15px;
+    height: 15px;
+    font-weight: bold;
+  }
+
+  .Search_bar{
+  display: flex;
+  align-items: center;
+  width: 24%;
+  position: relative;
+  height: 35px;
+  margin-left: 0.7em;
+  }
+
+  .Search_bar input {
+    width: 100%;
+    height: 100%;
+    font-size: 0.8rem;
+    line-height: 20px;
+    padding: 9px 17px;
+    border: none;
+    border-radius: 2px;
+    outline: none;
+  }
+  .SearchIcon{
+    position: absolute;
+    right: 20px;
+    color: #764ABC;
+    font-weight: 600;
+    font-size: 16px;
+  }
+  .input-tag input:focus {
+    outline: none;
+  }
+
+  .LBtn {
+    border: 1px solid #dbdbdb;
+    background: #fff;
+    color: #2874f0;
+    font-size: 1.1rem;
+    line-height: 20px;
+    padding: 7px 40px;
+    border-radius: 2px;
+    font-weight: 500;
+    margin-left: 30px;
+    cursor: pointer;
+  }
+
+  .SellerInfo{
+    line-height: 20px;
+    font-size: 16px;
+    letter-spacing: 0.1px;
+    font-weight: bold;
+    color: #fff;
+    margin-left: 30px;
+  }
+
+  .MoreInfo{
+    line-height: 20px;
+    font-size: 16px;
+    letter-spacing: 0.1px;
+    font-weight: bold;
+    color: #fff;
+    margin-left: 30px;
+  }
+
+  .CartInfo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 30px;
+    gap: 5px;
+    line-height: 20px;
+    font-size: 16px;
+    letter-spacing: 0.1px;
+    font-weight: bold;
+    color: #fff;
+  }
+
+  .Cart{
+    margin-top: 5px;
 }
