--- a/src/Component/NavBar.css
+++ b/src/Component/NavBar.css
@@ -1,5 +1,5 @@
 .navbar{
-    background-color: #764ABC;
+    background-color: #2c3e50;
     width: 100%;
     height: 65px;
     display: flex;
@@ -52,7 +52,7 @@ grid-row-gap: 0;
   .SearchIcon{
     position: absolute;
     right: 20px;
-    color: #764ABC;
+    color: #23486e;
     font-weight: 600;
     font-size: 16px;
   }
@@ -60,7 +60,7 @@ grid-row-gap: 0;
     outline: none;
   }
 
-  .LBtn {
+  /* .LBtn {
     border: 1px solid #dbdbdb;
     background: #fff;
     color: #2874f0;
@@ -71,7 +71,7 @@ grid-row-gap: 0;
     font-weight: 500;
     margin-left: 30px;
     cursor: pointer;
-  }
+  } */
 
   .SellerInfo{
     line-height: 20px;
