--- a/src/Component/footer.css
+++ b/src/Component/footer.css
@@ -7,7 +7,7 @@
     /* padding: 0px 70px; */
     text-align: left!important;
     list-style: none;
-    background: #764ABC;
+    background: #2c3e50;
     
 }
 .footer_name{
