--- a/src/products.css
+++ b/src/products.css
@@ -20,7 +20,7 @@
     border-radius: 2px;
     height: 40px;
     width: 120px;
-    background-color: rgb(8, 119, 82);
+    background-color: #34495e;
     color: white;
     font-weight: bolder;
     box-shadow: 2px 2px 10px gray;
@@ -43,7 +43,7 @@
     top: 50%;
     transform: translate(0%,-50%);
     z-index: 5;
-    color: rgba(0, 128, 0, 0.404);
+    color: #34495e40;
     height: 100px;
     background-color: rgba(255, 255, 255, 0.418);
     border: rgba(0, 0, 0, 0.329) solid 1px;
@@ -61,7 +61,7 @@
 }
 .scroll:hover{
     /* transform: scale(1.1); */
-    color: green;
+    color: #34495e;
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0.818);
 }
